# project-hub

./: .gitignore  .mcp.json  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  README.md  claude-agents-release.sh  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
agents/: budget-tracker.md  decision-tracker.md  document-analyst.md  knowledge-manager.md  meeting-facilitator.md  quality-assurance.md  report-generator.md  risk-manager.md  stakeholder-communicator.md  task-coordinator.md  timeline-planner.md
config/: config.example.yaml
knowledge/consulting/: engagement.md  governance.md  roles.md
knowledge/event/: logistics.md  runsheet.md  stakeholders.md
knowledge/generic/: charter.md
knowledge/it-project/: architecture.md  charter.md  runbook.md
knowledge/marketing/: campaign-brief.md  stakeholders.md
knowledge/merchant-onboarding/: governance.md  process.md  roles.md
project-types/: consulting.md  event.md  generic.md  it-project.md
project-types/consulting/: research.md
project-types/event/: research.md
project-types/generic/: research.md
project-types/it-project/: research.md
project-types/marketing/: README.md  research.md
project-types/merchant-onboarding/: README.md  research.md
servers/project-hub-server/: run.py  server.py
skills/add-contact/: SKILL.md
skills/add-note/: SKILL.md
skills/compose/: SKILL.md
(+46 files in other folders)
