[project]
license = { file = "LICENSE.md" }

[tool.pytest.ini_options]
testpaths = ["tests", "servers/project-hub-server/tests"]
pythonpath = ["servers/project-hub-server"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
